# firebase-push-example

./: .gitignore  LICENSE  README.md
fastapi/: README.md  pyproject.toml
fastapi/app/: chains.py  firebase-key.example.json  interfaces.py  server.py
react/: .env.example  package-lock.json  package.json
react/public/: firebase-messaging-sw-example.js  firebase-messaging-sw.js
react/src/: App.tsx  firebase.example.ts  firebase.ts
