[tool.poetry]
name = "basic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
pydantic = "^2.7.4"
dotenv = "^0.9.9"
google-auth = "^2.40.1"
firebase-admin = "^6.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
